--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "react-split-pane": "^0.1.91"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
