--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "vimturtle@FCC",
-  "name": "vimturtle@FCC",
+  "short_name": "vimturtle@freeCodeCamp",
+  "name": "vimturtle@freeCodeCamp",
   "icons": [],
   "start_url": ".",
   "display": "standalone",
